[gd_scene load_steps=11 format=2]

[ext_resource path="res://baddies/sprites/ShootyBoi/shooter2.png" type="Texture" id=1]
[ext_resource path="res://baddies/sprites/ShootyBoi/shooter4.png" type="Texture" id=2]
[ext_resource path="res://baddies/TurningHack.gd" type="Script" id=3]
[ext_resource path="res://baddies/sprites/ShootyBoi/shooter0.png" type="Texture" id=4]
[ext_resource path="res://baddies/sprites/ShootyBoi/shooter3.png" type="Texture" id=5]
[ext_resource path="res://baddies/sprites/ShootyBoi/shooter1.png" type="Texture" id=6]
[ext_resource path="res://baddies/WallBoi.gd" type="Script" id=7]
[ext_resource path="res://baddies/BaddieLaser/BaddieLaserPointer.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.6271, 9.07494 )

[node name="WallBoi" type="KinematicBody2D"]
rotation = 1.5708
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.16246, -16.7337 )
frames = SubResource( 1 )
animation = "crawl"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0812302, 1.62463 )
shape = SubResource( 2 )

[node name="FrontRayCast" type="RayCast2D" parent="."]
position = Vector2( -8.31084, -0.0812321 )
enabled = true
cast_to = Vector2( 0, 20 )
script = ExtResource( 3 )

[node name="BaddieLaserPointer" parent="." instance=ExtResource( 8 )]
position = Vector2( -4.04785e-07, -9.2604 )

[node name="RearRayCast" type="RayCast2D" parent="."]
position = Vector2( 10.311, -0.081 )
enabled = true
cast_to = Vector2( 0, 20 )
script = ExtResource( 3 )
